# esp-claw-smarthome

application/edge_agent/: sdkconfig.defaults
components/claw_capabilities/cap_ha_control/: CMakeLists.txt  Kconfig
components/claw_capabilities/cap_ha_control/data/: entities.default.json
components/claw_capabilities/cap_ha_control/include/: cap_ha_control.h  cmd_cap_ha_control.h
components/claw_capabilities/cap_ha_control/src/: cap_ha_automation.c  cap_ha_control.c  cap_ha_control_board.c  cap_ha_control_core.c  cap_ha_control_http.c  cap_ha_control_internal.h  cap_ha_control_resolve.c  cmd_cap_ha_control.c
docs/learn/: 20260508-cap-ha-control-plan-review-revision.md  20260508-cap-ha-control-v3.md  20260511-cap-ha-control-v3-ship-report.md  20260511-cap-ha-control-v4.md  20260512-cap-ha-automation-c04c845-followups.md  20260512-cap-ha-automation-prs-review.md  20260512-cap-ha-automation-state-trigger.md  20260512-cap-ha-control-v4-ship-and-state-trigger-followup.md  20260512-cap-ha-state-value-normalize-hotfix.md  20260513-arch-doc-ha-config-update.md  20260513-architecture-analysis-docs.md  20260513-cap-ha-automation-v5.md  20260513-v5-completion-report.md  20260513-v6-candidates-tracking.md  20260514-business-perspective-doc.md  20260514-smartthings-design-doc.md
smarthome-docs/architecture/: 01-esp-claw-current-architecture.md  02-openclaw-vs-esp-claw-comparison.md  03-smartthings-integration-design.md  04-openclaw-vs-esp-claw-business-perspective.md
smarthome-docs/learn/: 20260506-github-push-setup.md  20260506-plan-cross-verify.md
(+22 files in other folders)
